# dimatech-ltd-payments-test

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py  logging.py  runner.py  settings.py
app/db/: __init__.py  base.py  dependencies.py  helpers.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2026-05-31-15-39_bcedf426a7dc.py  2026-05-31-15-41_97e66179b6be.py  2026-05-31-18-13_0fa9a2f00aeb.py
app/db/models/: __init__.py  accounts.py  payments.py  users.py
app/db/repository/: __init__.py  accounts.py  payments.py  users.py
app/services/auth/: __init__.py  dependencies.py  service.py  tokens.py
app/services/db/: __init__.py  accounts.py  payments.py  users.py
app/services/payments/: __init__.py  exceptions.py  service.py  signature.py  types.py
app/web/: application.py  handlers.py  lifespan.py  openapi.py  responses.py  schemas.py
app/web/api/: __init__.py  router.py
app/web/api/docs/: __init__.py  views.py
app/web/api/v1/: __init__.py  router.py
app/web/api/v1/accounts/: __init__.py  schemas.py  views.py
app/web/api/v1/auth/: __init__.py  schemas.py  views.py
app/web/api/v1/payments/: __init__.py  schemas.py  views.py
app/web/api/v1/users/: __init__.py  schemas.py  views.py
scripts/: generate_webhook_signature.py
