[project]
name = "dimatech-ltd-payments-test"
version = "0.1.0"
description = "Async REST API for user/accounts/payments management with PostgreSQL, SQLAlchemy, FastAPI."
authors = [
    {name = "Daniil Pavlovich",email = "layred.dota2@mail.ru"}
]
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "fastapi-limiter (>=0.2.0,<0.3.0)",
    "ujson (>=5.12.1,<6.0.0)",
    "fastapi-filters (>=0.4.0,<0.5.0)",
    "fastapi-pagination (>=0.15.14,<0.16.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "yarl (>=1.24.2,<2.0.0)",
    "pwdlib[argon2,bcrypt] (>=0.3.0,<0.4.0)"
]

[tool.poetry]
package-mode = false
packages = [{ include = "app" }]

[tool.mypy]
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
implicit_reexport = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.ruff]
include = ["app/**/*.py"]
line-length = 88
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "S",
    "B",
    "COM",
    "C",
    "ISC",
    "PIE",
    "T",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "PTH",
    "ERA",
    "PLR",
    "RUF",
    "UP",
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "D100",
    "COM812"
]
pydocstyle = { convention = "pep257", ignore-decorators = ["typing.overload"] }
isort = { force-single-line = false, known-first-party = ["app"] }
pylint = { allow-magic-value-types = ["int", "str", "float", "bytes"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
